# unik4690

./: LatexTemplate.py  README.md  test.py  test.txt
project/pdf/: 3d-portion.py  3d-portion.txt  LatexTemplate.py  test.aux  test.py  test.txt
project/request_pdf/: subject_proposal.aux  subject_proposal.tex  subject_proposal.tex.backup
project/source/: #estimator.py#  #shapes.py#  Laplace_Filter.py  Laplace_Filter_Deprecated.py  common.py  draw.py  draw2-temp.py  draw2.py  draw3.py  draw_alt.py  estimator.py  gradient_estimator.py  images.py  k126data.txt  k34578data.txt  motion_fail.py  read.py  readme.txt  run  run.py  run2  run_altcam  run_webcam.py  run_webcam2.py  runhigh  runhigh2  shapes.py  thresdata.txt
project/source/graveyard/: failedmemorytrick.py  gradient_estimator.py  run.py
project/tensorflowtest/: test.py
tutorial/Cam/: main  main.cpp
tutorial/Display/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  bart.cpp  blend.cpp  blend_images  cmake_install.cmake  display_image  parity.cpp
tutorial/derivative/: CMakeLists.txt  derivative.cpp
tutorial/fourier/: CMakeCache.txt  CMakeLists.txt  Makefile  a  cmake_install.cmake  fourier.cpp
